# SAT-Solver-CDCL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  measurements.txt  output.txt  queens_inputs.txt  queens_measurements.txt  sats_input_file_names.txt  sats_inputs.txt  solve_circuits_from_dir.sh  test.sh  unsats_inputs.txt
.github/workflows/: cmake.yml
cmake_files/: CMakeCache.txt  Makefile  cdcl_sat_solver  cmake_install.cmake  hand_test  measurements
include/: Bench_parser.h  CDCL.h  Dimacs_parser.h  Entities.h  Tseitin_transformation.h
measurements/: main.cpp
queenTests/: test_N=10  test_N=20
queengen/: filer.cpp  gen  gen.cpp
queengen/queenTests/: test_N=15  test_N=25  test_N=30  test_N=35  test_N=40  test_N=45
src/: Bench_parser.cpp  CDCL.cpp  Dimacs_parser.cpp  Entities.cpp  SolveCircuitSAT.cpp  SolveSAT.cpp  Tseitin_transformation.cpp  submain.cpp
tests/: config.py  dimacs_parser.cpp  dimacs_parser.h  main.cpp  test_runner.py
